[package]
name = "actix-web-middleware-redirect-scheme"
version = "1.1.1"
description = "A middleware for actix-web which forwards all `http` requests to `https` and vice versa. Based on actix-web-middleware-redirect-https."
authors = ["Peter Trotman <petertrotman@gmail.com>", "Захаров Константин Иванович <konstantin_1987@mail.ru"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/actix-web-middleware-redirect-scheme"
repository = "https://github.com/perdumonocle/actix-web-middleware-redirect-scheme"
readme = "README.md"
keywords = ["actix-web", "middleware", "redirect", "https", "ssl"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
actix-service = "1.0.5"
actix-web = "2.0.0"
futures = "0.3"

[badges]
travis-ci = { repository = "https://travis-ci.org/perdumonocle/actix-web-middleware-redirect-scheme", branch = "master" }
